--- a/document/templates/document/document.html
+++ b/document/templates/document/document.html
@@ -60,15 +60,15 @@
 <div class="documentArea">
     <span class="documentType">출력문서 :</span>
 
-    <span class="btnModules" onclick="openVehicleRegistrationPrint('/document/print/vehicle')">차량등록증</span>
+    <span class="printingBtn" onclick="openVehicleRegistrationPrint('/document/print/vehicle')">차량등록증</span>
 
-    <span class="btnModules" onclick="openPledgePrint('/document/print/commitment')">확약서</span>
+    <span class="printingBtn" onclick="openPledgePrint('/document/print/commitment')">확약서</span>
 
-    <span class="btnModules" onclick="openBuscheckPrint('/document/print/safety')" >차량안전 점검표</span>
+    <span class="printingBtn" onclick="openBuscheckPrint('/document/print/safety')" >차량안전 점검표</span>
 
-    <span class="btnModules" onclick="openSchoolPrint('/document/print/school')">표찰</span>
+    <span class="printingBtn" onclick="openSchoolPrint('/document/print/school')">표찰</span>
 
-    <span class="btnModules" onclick="openDrinkingPrint('/document/print/drinking')">자가 음주측정 보고서</span>
+    <span class="printingBtn" onclick="openDrinkingPrint('/document/print/drinking')">자가 음주측정 보고서</span>
 
     <span class="documentType documentTypeLocation">사이트로 이동 :</span>
     <!-- 전세버스 공제조합 -->
