--- a/vehicle/templates/vehicle/maintenance.html
+++ b/vehicle/templates/vehicle/maintenance.html
@@ -71,51 +71,57 @@
         </table>
     </div>
 
-    <div class="maintenanceArticle">
-        <table class="maintenanceHeader">
-            <thead>
-                <tr>
-                    <td>정비일자</td>
-                    <td>정비항목</td>
-                    <td>구분</td>
-                    <td>부품명</td>
-                    <td>일련번호</td>
-                    <td>수량</td>
-                    <td>금액</td>
-                    <td>주행거리(km)</td>
-                    <td>정비처</td>
-                </tr>
-            </thead>
-        </table>
-        <div class="maintenanceScrollBox">
-            <table>
-                <tbody>
+    <div class="maintenanceArea">
+
+        <div class="optionList"></div>
+
+        <div class="maintenanceArticle">
+            <table class="maintenanceHeader">
+                <thead>
                     <tr>
-                        <td>2022-09-10</td>
-                        <td>엔진오일</td>
-                        <td>교환</td>
-                        <td></td>
-                        <td>35255465</td>
-                        <td>1</td>
-                        <td>50,000</td>
-                        <td>45,000</td>
-                        <td>TBX</td>
+                        <td>정비일자</td>
+                        <td>정비항목</td>
+                        <td>구분</td>
+                        <td>부품명</td>
+                        <td>일련번호</td>
+                        <td>수량</td>
+                        <td>금액</td>
+                        <td>주행거리(km)</td>
+                        <td>정비처</td>
                     </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr class="blanckTr"></tr>
-                </tbody>
+                </thead>
             </table>
+            <div class="maintenanceScrollBox">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>2022-09-10</td>
+                            <td>엔진오일</td>
+                            <td>교환</td>
+                            <td></td>
+                            <td>35255465</td>
+                            <td>1</td>
+                            <td>50,000</td>
+                            <td>45,000</td>
+                            <td>TBX</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr class="blanckTr"></tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
+        
     </div>
 
 </div>
