--- a/static/css/crudmember/calender.css
+++ b/static/css/crudmember/calender.css
@@ -357,6 +357,11 @@
     background-color: #444;
 }
 
+.addChecker {
+    background-color: #0069D9;
+    margin-right: 1rem;
+}
+
 .checkerDataBox {
     display: flex;
     justify-content: flex-start;
