--- a/static/css/dispatch/regularly.css
+++ b/static/css/dispatch/regularly.css
@@ -645,6 +645,14 @@
   font-size: 1.4rem;
 }
 
+.weekHead div:nth-child(1){
+  color: #DC1E1E;
+}
+
+.weekHead div:nth-last-child(1){
+  color: #0069D9;
+}
+
 .historyArticle{
   display: grid;
   grid-template-columns: repeat(7, 1fr);
@@ -664,10 +672,22 @@
   align-items: center;
   width: calc((100% - 1rem));
   height: 11rem;
-  margin: 0.5;
+  margin: 0.5rem;
   box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.3);
   background-color: white;
   border-radius: 0.2rem;
+  cursor: pointer;
+}
+
+.historyDateBoxSelect div:nth-child(2),
+.historyDateBoxSelect div:nth-child(3){
+  background-color: #0069D9;
+  color: white;
+}
+
+.historyDateBoxSelect div:nth-child(2){
+  border-top: 0.1rem solid white;
+  border-bottom: 0.1rem solid white;
 }
 
 .historyDate{
@@ -700,119 +720,10 @@
   font-size: 1.4rem;
 }
 
-/* .weekTable {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 10.8rem;
-  font-size: 1.4rem;
-}
-
-.weekTableHeader {
-  display: flex;
-  background-color: #444;
-  height: 3.6rem;
-}
-
-.weekTableHeader div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 13%;
-  height: 100%;
-  color: white;
-}
-
-.weekTableHeader div:nth-child(1) {
-  width: 9%;
-}
-
-.weekTableBody {
-  display: flex;
-  width: 100%;
-  height: 7.2rem;
-}
-
-.historyItemTitle {
-  display: flex;
-  flex-direction: column;
-  width: 9%;
-  height: 100%;
-  border-bottom: 0.1rem solid #CDCDCE;
-  border-right: 0.1rem solid #CDCDCE;
-  border-left: 0.1rem solid #CDCDCE;
-}
-
-.historyItem {
-  display: flex;
-  flex-direction: column;
-  width: 13%;
-  height: 100%;
-  border-bottom: 0.1rem solid #CDCDCE;
-  border-right: 0.1rem solid #CDCDCE;
-  cursor: pointer;
-  background-color: white;
-}
-
-.checkHistoryItem {
-  background-color: #0069D9;
-}
-
-.historyBus {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 50%;
-  border-bottom: 0.1rem solid #CDCDCE;
-}
-
-.historyDriver {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 50%;
-  padding: 0 1rem;
-  box-sizing: border-box;
-}
-
-.historyDriverTItle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 50%;
-  padding: 0 1rem;
-  box-sizing: border-box;
-}
-
-.secondWeek {
-  margin-top: 2rem;
-}
-
-.driverType {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 2.2rem;
-  height: 2.2rem;
-  border-radius: 0.3rem;
-  color: white;
-}
-
-.typeRegular {
-  background-color: #0069D9;
-}
-
-.typeOutsourcing {
-  background-color: #444;
-}
-
-.popupCloseBtn {
-  background-color: #444;
-}
-
 .historyUnable{
   background-color: #EFEFEF;
-} */
+}
+
+.popupCloseBtn{
+  background-color: #444;
+}
