--- a/static/css/document/document.css
+++ b/static/css/document/document.css
@@ -109,11 +109,22 @@
     margin-left: 3rem;
 }
 
-.documentArea .btnModules {
+.documentArea .printingBtn {
     width: auto;
-    padding: 0 1rem;
-    background-color: #444444;
+    padding: 0.4rem 1.6rem;
+    background-color: white;
+    border: 0.1rem solid #ABABAB;
+    border-radius: 0.3rem;
+    font-size: 1.4rem;
+    color: #0069D9;
     margin-right: 1.2rem;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+.documentArea .printingBtn:hover{
+    padding: 0.3rem 1.5rem;
+    border: 0.2rem solid #0069D9;
 }
 
 
